--- a/frontend.scaffold/src/components/Card/CardStyles.scss
+++ b/frontend.scaffold/src/components/Card/CardStyles.scss
@@ -10,7 +10,11 @@
   height: 100%;
   max-width: 100%;
   min-height: 330px;
+  transition: box-shadow .2s;
+}
 
+.Card:hover {
+    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
 .Button {
@@ -57,9 +61,9 @@
 }
 
 .CardContainer:hover {
-  -ms-transform: scale(1.1); /* IE 9 */
-  -webkit-transform: scale(1.1); /* Safari 3-8 */
-  transform: scale(1.1);
+  -ms-transform: scale(1.05); /* IE 9 */
+  -webkit-transform: scale(1.05); /* Safari 3-8 */
+  transform: scale(1.05);
 }
 
 .Content {
