--- a/frontend.scaffold/src/pages/DatabaseAssistant/DatabaseAssistant.module.scss
+++ b/frontend.scaffold/src/pages/DatabaseAssistant/DatabaseAssistant.module.scss
@@ -1,11 +1,12 @@
-.container {
-
-
-    form {
-        margin-bottom: 1em;
-    }
-
-    form:nth-of-type(even){
-        margin-bottom: 2em;
-    }
+form {
+  //margin-bottom: 0.3em;
 }
+/*
+button:nth-child(2) {
+  margin-bottom: 5em;
+}
+
+button:nth-child(2) {
+  margin-bottom: 0.3em;
+}
+*/
