--- a/frontend.scaffold/src/components/Navigation/NavigationStyles.scss
+++ b/frontend.scaffold/src/components/Navigation/NavigationStyles.scss
@@ -11,7 +11,7 @@ body {
   -moz-box-shadow:0px 2px 5px grey;
   box-shadow:0px 2px 5px grey;
   width: 100%;
-  z-index: 9999999999999999;
+  z-index: 1000;
   flex-shrink: 0;
 }
 
