--- a/frontend.scaffold/src/pages/EntityExplorer/EntityExplorer.module.scss
+++ b/frontend.scaffold/src/pages/EntityExplorer/EntityExplorer.module.scss
@@ -2,7 +2,22 @@
     list-style: none;
     padding: 0;
     width: 50%;
+
     margin-bottom: 5em;
+}
+
+.filename {
+    justify-content: flex-start;
+    display: flex;
+    width: 100%;
+}
+
+.x {
+    display: flex;
+    width: 100%;
+    column-gap: 1rem;
+    justify-content: flex-start;
+    cursor: pointer;
 }
 
 .li {
